# dict.c

./: CMakeLists.txt  README.md
sample_data/: dummy.txt  markov_and_you.txt  pagerank.txt  pirate_radio_1.txt  pirate_radio_2.txt  pirate_radio_3.txt  pirate_radio_4.txt  radio_sentences.txt  test.txt  the_old_world_in_the_new.txt  the_old_world_in_the_new_clean.txt
src/: dict.c  dict.h  dict_entry.c  dict_entry.h  none.c  none.h  primes.c  test_dict.c
src/markov/: arr.c  arr.h  linear_random.h  markov.c  options.c  options.h  tokenise.c  tokenise.h
